Use thread locals to reduce contention